Fix icons alignment (#1444)
Resolves #1443

--- a/ui/src/scss/layout/_sidebar.scss
+++ b/ui/src/scss/layout/_sidebar.scss
@@ -132,7 +132,7 @@ $sidebar-active: #00a79d;
 
   .sidebar-fa {
     position: absolute;
-    top: 13px;
+    top: 11px;
     left: 0px;
     width: $sidebar-width - 4px;
     text-align: center;
