--- a/ui/src/scss/layout/_table.scss
+++ b/ui/src/scss/layout/_table.scss
@@ -171,6 +171,9 @@ table.table-checkbox {
     padding-right: 0.2rem;
     padding-left: 1.5rem;
   }
+  thead>tr>th {
+    vertical-align: middle;
+  }
 }
 
 table.table-styled-1 {
